<resources xmlns:xliff="http://schemas.android.com/tools">

    <!-- Tabs -->
    <string name="tab_pick">Pick</string>
    <string name="tab_play">Play</string>
    <string name="tab_history">History</string>
    <string name="tab_chords">Chords</string>

    <!-- Welcome -->
    <string name="button_quick_chord">Quick Chord</string>
    <string name="button_random_chord">Random</string>
    <string name="button_choose_chord">Play</string>
    <string name="label_choose_chords">Pick Chords</string>
    <string name="label_chord_1">Chord #1</string>
    <string name="label_chord_2">Chord #2</string>

    <!-- Practice -->
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="dialogue_times_up_title">Time\'s Up!</string>
    <string name="dialogue_times_up_message">How many changes did you manage?</string>
    <string name="dialogue_times_up_ok_button">OK</string>
    <string name="dialogue_times_up_cancel_button">I gave up!</string>
    <string name="format_best_score">(Best: <xliff:g id="best_score">%d</xliff:g>)</string>

    <!-- Chords -->
    <string name="dialogue_add_chord_title">Add Chord</string>
    <string name="dialogue_add_chord_content">Enter name of chord:</string>
    <string name="dialogue_add_chord_hint" translatable="false">e.g. Am</string>
    <string name="dialogue_add_chord_prefill"></string>
    <string name="dialogue_error_chord_exists">You already have that chord!</string>
    <string name="dialogue_error_chord_not_valid">Oops, that chord name looks funny! Use lower and upper letters, and numbers</string>
    <string name="chords_typeface" translatable="false">fonts/Roboto-Light.ttf</string>

    <!-- History -->
    <string name="history_changes_label">Changes: </string>

    <!-- Action Strings-->
    <string name="action_settings">Settings</string>

    <!-- Preferences -->
    <string name="pref_countdown_time_key" translatable="false">key_countdown</string>
    <string name="pref_countdown_time">Countdown Seconds</string>
    <string name="pref_countdown_time_summary">How many seconds to allow for each practice change</string>
    <string name="pref_leadin_time_key" translatable="false">key_leadin</string>
    <string name="pref_leadin_time">Leadin Seconds</string>
    <string name="pref_leadin_time_summary">How many seconds to count you in before starting</string>
    <string name="pref_target_changes_key" translatable="false">key_target_changes</string>
    <string name="pref_target_changes">Target Changes</string>
    <string name="pref_target_changes_summary">How many changes to complete before this chord change is fast enough</string>

    <!-- Content Authorities -->
    <string name="content_authority_chords" translatable="false">io.coderunner.chordmaster.provider.ChordsProvider</string>

    <!-- General -->
    <string name="no_data">No history yet, get strumming!</string>
    <string name="test_device_id" translatable="false">3D7A81A8C6EFE58743D4EA139908457B</string>
    <string name="date_format_pattern" translatable="false">MMM dd HH:mm</string>
    <string name="input_regex_pattern" translatable="false">[a-zA-Z0-9]+</string>

    <!-- Firebase -->
    <string name="firebase_path_users" translatable="false">users</string>
    <string name="firebase_path_scores" translatable="false">scores</string>

    <!-- Content Descriptions -->
    <string name="cd_chord_1">Chord 1</string>
    <string name="cd_chord_1_picker">Chord 1</string>
    <string name="cd_chord_2">Chord 2</string>
    <string name="cd_chord_2_picker">Chord 2</string>
    <string name="cd_play">Play</string>
    <string name="cd_random_chord">Random Chord</string>
    <string name="cd_advert">Advert</string>
    <string name="cd_score_picker">Input number of changes</string>
    <string name="cd_chords">Chords</string>
    <string name="cd_add_chord">Add chord</string>
    <string name="cd_history">Practice History</string>
    <string name="cd_timer">Timer</string>
    <string name="cd_time_remaining">Seconds Remaining</string>
    <string name="cd_pause">Pause</string>
    <string name="cd_resume">Resume</string>
    <string name="cd_changes_label">Changes</string>
    <string name="cd_achieved">Date Achieved</string>
    <string name="cd_no_data">Empty History</string>

</resources>
